--- a/dashboard/templates/blocks/footer.ejs
+++ b/dashboard/templates/blocks/footer.ejs
@@ -3,17 +3,17 @@
         <div class="row">
           <div class="col-md-4">
             <h2>Server</h2>
-            <p>The home of GuideBot.</p>
-            <p><a class="btn btn-secondary" href="https://discord.gg/4NE4bk7" role="button">Join Server <i class="fa fa-fw fa-chevron-circle-right" aria-hidden="true"></i></a></p>
+            <p>The home of Shitpost.</p>
+            <p><a class="btn btn-secondary" href="https://discord.gg/HUn9J3X" role="button">Join Server <i class="fa fa-fw fa-chevron-circle-right" aria-hidden="true"></i></a></p>
           </div>
           <div class="col-md-4">
             <h2>Source Code</h2>
             <p>If you want to get the code, click the button below.</p>
-            <p><a class="btn btn-secondary" href="https://github.com/An-Idiots-Guide/guidebot-class/" role="button">GitHub <i class="fa fa-fw fa-chevron-circle-right" aria-hidden="true"></i></a></p>
+            <p><a class="btn btn-secondary" href="https://github.com/OverThrowDev/shitpost/" role="button">GitHub <i class="fa fa-fw fa-chevron-circle-right" aria-hidden="true"></i></a></p>
           </div>
         </div>
       </div>
-      <footer class="footer"><p style="text-align:center">© An Idiot's Guide 2017 <a href="#" class="back-to-top" style="text-align:center"><i class="fa fa-fw fa-arrow-circle-up"></i></a></p></footer>
+      <footer class="footer"><p style="text-align:center">© OverThrowDev 2020 <a href="#" class="back-to-top" style="text-align:center"><i class="fa fa-fw fa-arrow-circle-up"></i></a></p></footer>
     </div>
   </body>
 </html>
